--- a/1-4,时间序列数据建模流程范例.md
+++ b/1-4,时间序列数据建模流程范例.md
@@ -49,9 +49,30 @@ plt.xticks(rotation=60)
 
 ```python
 dfdata = df.set_index("date")
-dfdiff = dfdata.diff(periods=1).dropna()
-dfdiff = dfdiff.reset_index("date")
+```
 
+```python
+dfdata.head(2)
+```
+
+```python
+dfdiff = dfdata.diff(periods=1).dropna()
+
+```
+
+```python
+dfdiff.head(2)
+```
+
+```python
+dfdiff = dfdiff.reset_index("date")
+```
+
+```python
+dfdiff.head(2)
+```
+
+```python
 dfdiff.plot(x = "date",y = ["confirmed_num","cured_num","dead_num"],figsize=(10,6))
 plt.xticks(rotation=60)
 dfdiff = dfdiff.drop("date",axis = 1).astype("float32")
@@ -59,6 +80,10 @@ dfdiff = dfdiff.drop("date",axis = 1).astype("float32")
 ```
 
 ![](./data/1-4-新增曲线.png)
+
+```python
+dfdiff.values[:2]
+```
 
 ```python
 #用某日前8天窗口数据作为输入预测该日数据
