--- a/4-2,张量的数学运算.md
+++ b/4-2,张量的数学运算.md
@@ -43,6 +43,14 @@ array([[ 6.,  8.],
 ```
 
 ```python
+a
+```
+
+```python
+b
+```
+
+```python
 a-b 
 ```
 
@@ -80,6 +88,10 @@ a**2
 <tf.Tensor: shape=(2, 2), dtype=float32, numpy=
 array([[ 1.,  4.],
        [ 9., 16.]], dtype=float32)>
+```
+
+```python
+a
 ```
 
 ```python
@@ -185,9 +197,6 @@ tf.print(tf.minimum(a,b))
 [1 6]
 ```
 
-```python
-
-```
 
 ### 二，向量运算
 
@@ -211,6 +220,10 @@ tf.print(tf.reduce_prod(a))
 9
 1
 362880
+```
+
+```python
+a
 ```
 
 ```python
@@ -352,7 +365,7 @@ tf.linalg.trace(a)
 
 ```python
 #矩阵求范数
-a = tf.constant([[1.0,2],[3,4]])
+a = tf.constant([[1.0,2],[3,4]]) # sqrt(1 + 4 + 9 + 16)
 tf.linalg.norm(a)
 ```
 
@@ -414,11 +427,15 @@ array([[0.9999996, 1.9999996],
 ```
 
 ```python
-
+v
 ```
 
 ```python
+s
+```
 
+```python
+d
 ```
 
 ### 四，广播机制
