--- a/4-1,张量的结构操作.md
+++ b/4-1,张量的结构操作.md
@@ -264,6 +264,14 @@ tf.print(a)
 tf.print(a[...,1])
 ```
 
+```python
+tf.print(a[:,:,1])
+```
+
+```python
+tf.print(a[:,:,1:3])
+```
+
 ```
 [[3 0 6]
  [3 8 1]
@@ -490,6 +498,10 @@ array([[0, 0],
 ```
 
 ```python
+tf.scatter_nd([[0,0],[2,1]],[c[0,0],c[2,1]],c.shape)
+```
+
+```python
 #将张量的第[0,0]和[2,1]两个位置元素替换为0得到新的张量
 d = c - tf.scatter_nd([[0,0],[2,1]],[c[0,0],c[2,1]],c.shape)
 d
@@ -518,7 +530,8 @@ array([[-1.,  0., -1.],
 ```
 
 ```python
-
+indices = tf.where(c<0)
+tf.gather_nd(c, indices)
 ```
 
 ### 三，维度变换
@@ -745,6 +758,10 @@ b = tf.constant([[5.0,6.0],[7.0,8.0]])
 c = tf.constant([[9.0,10.0],[11.0,12.0]])
 
 c = tf.concat([a,b,c],axis = 0)
+```
+
+```python
+c
 ```
 
 tf.split是tf.concat的逆运算，可以指定分割份数平均分割，也可以通过指定每份的记录数量进行分割。
